# Data-Logger

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
components/client/: CMakeLists.txt  client.c  client.h
components/i2c_rw/: CMakeLists.txt  i2c_rw.c  i2c_rw.h
components/ntp/: CMakeLists.txt  ntp.c  ntp.h
components/sensors/: CMakeLists.txt  sensors.c  sensors.h
components/server/: CMakeLists.txt  server.c  server.h
components/server/web/: index.html
components/wifi/: connect.c  connect.h
main/: CMakeLists.txt  main.c  task_1.c
main/mqtt/: mqtt.c  mqtt.h
